Implementing BrowsePetPreview #37, Removed footer, Fixed gap between nav bar and landing hero (#63)
* Adding BrowsePetPreview.jsx and remove Footer.jsx

* Remove Footer import

* Removed import Footer in BrowsePets.jsx

* Made Browse Pets Preview more flexible

* Fix scroll issue

---------

--- a/frontend/src/styles/BrowsePets.css
+++ b/frontend/src/styles/BrowsePets.css
@@ -1,6 +1,3 @@
-*{
-  overflow-x: hidden;
-}
 #pet-gallery {
     box-sizing: border-box;
     display: flex;
